Adição de telas

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -18,7 +18,18 @@
             <div>
                 <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
             </div>
-    
+            <section id="Login">
+                <h1>Login</h1>
+                <input type="email" name="email" placeholder="Digite seu email" class="email" required>
+                <input type="password" name="password" placeholder="Digite sua senha" class="pass"  required>
+
+                <footer>
+                    <button class="RegisterButton">
+                        Entrar
+                    </button>
+                    <a href="cadastro.html">Fazer cadastro</a>
+                </footer>
+            </section>
         </div>
     </main>
 </body>
