--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -18,7 +18,17 @@
             <div>
                 <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
             </div>
-    
+            <section id="Register">
+                <h1>Cadastro</h1>
+                <input type="email" name="email" placeholder="Digite seu email" class="email" required>
+                <input type="password" name="password" placeholder="Digite sua senha" class="pass"  required>
+                <footer>
+                    <button class="RegisterButton">
+                        cadastrar
+                    </button>
+                    <a href="login.html">Fazer login</p>
+                </footer>
+            </section>
         </div>
     </main>
 </body>
