--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaskFlow</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>TaskFow</title>
+    <link rel="stylesheet" href="/frontend/CSS/index.css">
     <script>src="scripts.js"</script>
 </head>
 <body>
     <header>
-        <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
+        <img src="/frontend/imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
         <h1 id="Title">Taskflow</h1>
     </header>
 
     <main>
         <div id="CenterBlock">
             <div>
-                <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
+                <img src="/frontend/imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
+                <p>Bem vindo!</p>
             </div>
     
         </div>
