--- a/frontend/HTML/login.html
+++ b/frontend/HTML/login.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFlow</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/frontend/CSS/login.css">
     <script>src="scripts.js"</script>
 </head>
 <body>
     <header>
-        <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
+        <img src="/frontend/imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
         <h1 id="Title">Taskflow</h1>
     </header>
 
     <main>
         <div id="CenterBlock">
             <div>
-                <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
+                <img src="/frontend/imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
             </div>
-            <section id="Register">
-                <h1>Cadastro</h1>
+            <section id="Login">
+                <h1>Login</h1>
                 <input type="email" name="email" placeholder="Digite seu email" class="email" required>
                 <input type="password" name="password" placeholder="Digite sua senha" class="pass"  required>
+
                 <footer>
-                    <button class="RegisterButton">
-                        cadastrar
+                    <button class="LoginButton">
+                        Entrar
                     </button>
-                    <a href="login.html">Fazer login</p>
+                    <a href="cadastro.html">Fazer cadastro</a>
                 </footer>
             </section>
         </div>
