Implementação da funcionalidade de cadastro.

--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFlow</title>
     <link rel="stylesheet" href="styles.css">
-    <script>src="scripts.js"</script>
 </head>
+
 <body>
     <header>
         <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
@@ -18,18 +19,26 @@
             <div>
                 <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
             </div>
-            <section id="Register">
+            <form action="" id="Register">
                 <h1>Cadastro</h1>
-                <input type="email" name="email" placeholder="Digite seu email" class="email" required>
-                <input type="password" name="password" placeholder="Digite sua senha" class="pass"  required>
+                <input type="text" name="nome" placeholder="Nome Completo" id="nome" autocomplete="off" required>
+                <input type="email" name="email" placeholder="Digite seu email" id="email" class="email" required
+                    autocomplete="off">
+                <input type="password" name="password" placeholder="Digite sua senha" id="pass" class="pass" required>
+                <input type="password" name="confirmePass" placeholder="Confirme sua senha" id="confirme-pass" required>
                 <footer>
-                    <button class="RegisterButton">
+                    <button type="submit" class="RegisterButton" id="btn-cadastrar">
                         cadastrar
                     </button>
                     <a href="login.html">Fazer login</p>
                 </footer>
-            </section>
+            </form>
+
+            <div class="msg">O e-mail fornecido já está registrado.</div>
         </div>
     </main>
+
+    <script src="scripts.js"></script>
 </body>
+
 </html>
