--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFlow</title>
     <link rel="stylesheet" href="styles.css">
-    <script>src="scripts.js"</script>
 </head>
+
 <body>
     <header>
         <img src="imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
@@ -21,7 +22,7 @@
             <section id="Login">
                 <h1>Login</h1>
                 <input type="email" name="email" placeholder="Digite seu email" class="email" required>
-                <input type="password" name="password" placeholder="Digite sua senha" class="pass"  required>
+                <input type="password" name="password" placeholder="Digite sua senha" class="pass" required>
 
                 <footer>
                     <button class="RegisterButton">
@@ -32,5 +33,8 @@
             </section>
         </div>
     </main>
+
+    <script src="scripts.js"></script>
 </body>
+
 </html>
