Adição da tela de tarefas

--- a/frontend/HTML/register.html
+++ b/frontend/HTML/register.html
@@ -20,11 +20,11 @@
             </div>
             <form action="" id="Register">
                 <h1>Cadastro</h1>
-                <!-- <input type="text" name="nome" placeholder="Nome Completo" id="nome" autocomplete="off" required> -->
+                <input type="text" name="nome" placeholder="Nome Completo" id="nome" autocomplete="off" required>
                 <input type="email" name="email" placeholder="Digite seu email" id="email" class="email" required
                     autocomplete="off">
                 <input type="password" name="password" placeholder="Digite sua senha" id="pass" class="pass" required>
-                <!-- <input type="password" name="confirmePass" placeholder="Confirme sua senha" id="confirme-pass" required> -->
+                <input type="password" name="confirmePass" placeholder="Confirme sua senha" id="confirme-pass" required>
                 <footer>
                     <button type="submit" class="RegisterButton" id="btn-cadastrar">
                         cadastrar
