Integrando sistema de autenticação.

--- a/frontend/HTML/login.html
+++ b/frontend/HTML/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFlow</title>
     <link rel="stylesheet" href="/frontend/CSS/login.css">
-    <script>src="scripts.js"</script>
 </head>
+
 <body>
     <header>
         <img src="/frontend/imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
@@ -18,19 +19,25 @@
             <div>
                 <img src="/frontend/imgs/logo.png" alt="Logo do TaskFlow" id="LogoInicio">
             </div>
-            <section id="Login">
+            <form id="Login">
                 <h1>Login</h1>
-                <input type="email" name="email" placeholder="Digite seu email" class="email" required>
-                <input type="password" name="password" placeholder="Digite sua senha" class="pass"  required>
+                <input type="email" name="email" placeholder="Digite seu email" class="email" autocomplete="off"
+                    required>
+                <input type="password" name="password" placeholder="Digite sua senha" class="pass" required>
 
                 <footer>
                     <button class="LoginButton">
                         Entrar
                     </button>
-                    <a href="cadastro.html">Fazer cadastro</a>
+                    <a href="register.html">Fazer cadastro</a>
                 </footer>
-            </section>
+            </form>
+
+            <div class="msg">Login incorreto</div>
         </div>
     </main>
+
+    <script src="../JS/login.js"></script>
 </body>
+
 </html>
