--- a/frontend/HTML/tasks.html
+++ b/frontend/HTML/tasks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFow</title>
     <link rel="stylesheet" href="/frontend/CSS/tasks.css">
-    <script>src="scripts.js"</script>
+    <script src="../JS/validate.js"></script>
 </head>
 <body>
     <header>
