--- a/frontend/HTML/register.html
+++ b/frontend/HTML/register.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskFlow</title>
     <link rel="stylesheet" href="/frontend/CSS/register.css">
-    <script>src="scripts.js"</script>
 </head>
 <body>
     <header>
@@ -37,7 +36,7 @@
         </div>
     </main>
 
-    <script src="../scripts.js"></script>
+    <script src="../JS/scripts.js"></script>
 </body>
 
 </html>
