Task screen update

--- a/frontend/HTML/register.html
+++ b/frontend/HTML/register.html
@@ -36,7 +36,7 @@
         </div>
     </main>
 
-    <script src="../JS/scripts.js"></script>
+    <!-- <script src="../JS/scripts.js"></script> -->
 </body>
 
 </html>
