--- a/frontend/HTML/login.html
+++ b/frontend/HTML/login.html
@@ -37,7 +37,7 @@
         </div>
     </main>
 
-    <script src="../JS/login.js"></script>
+    <!-- <script src="../JS/login.js"></script> -->
 </body>
 
 </html>
