--- a/frontend/HTML/tasks.html
+++ b/frontend/HTML/tasks.html
@@ -29,6 +29,7 @@
             <div class="InsideContent">
                 <form class="add-form">
                     <input type="text" class="input-tarefa" placeholder="Nome da tarefa">
+                    <input type="datetime-local" class="input-prazo" placeholder="Prazo da tarefa">
                     <button class="btn-tarefa" type="submit">
                         <span class="material-symbols-outlined">
                             post_add
@@ -44,17 +45,11 @@
                             <th>Status</th>
                             <th>Ações</th>
                         </tr>
-
                     </thead>
-
                     <tbody>
-
                     </tbody>
-
                 </table>
-
             </div>
-
         </div>
     </main>
     <script src="/frontend/JS/tasks.js"></script>
