--- a/frontend/HTML/tasks.html
+++ b/frontend/HTML/tasks.html
@@ -29,8 +29,8 @@
             <div class="InsideContent">
                 <form class="add-form">
                     <input type="text" class="input-tarefa" placeholder="Nome da tarefa">
-                    <input type="datetime-local" class="input-prazo" placeholder="Prazo da tarefa">
-                    <button class="btn-tarefa" type="submit">
+                    <input type="date" class="input-prazo" placeholder="Prazo da tarefa">
+                    <button class="btn-tarefa" type="submit" disabled>
                         <span class="material-symbols-outlined">
                             post_add
                         </span>
