--- a/frontend/HTML/tasks.html
+++ b/frontend/HTML/tasks.html
@@ -30,7 +30,7 @@
                 <form class="add-form">
                     <input type="text" class="input-tarefa" placeholder="Nome da tarefa">
                     <input type="date" class="input-prazo" placeholder="Prazo da tarefa">
-                    <button class="btn-tarefa" type="submit" disabled>
+                    <button class="btn-tarefa" type="submit" title="Adicionar Tarefa" disabled>
                         <span class="material-symbols-outlined">
                             post_add
                         </span>
